fixing font issue on firefox

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,7 +11,14 @@
 
 @font-face {
   font-family: 'Bebas Neue';
-  src: local('Bebas'), url('../fonts/Bebas.ttf') format('ttf');
+  font-style: normal;
+  font-weight: normal;
+  src: url('../fonts/BebasNeue-Regular.eot');
+  src: local('BebasNeue-Regular'),
+    url('../fonts/Bebas.ttf') format('ttf'),
+    url('../fonts/BebasNeue-Regular.otf') format('otf'),
+    url('../fonts/BebasNeue-Regular.woff') format('woff'),
+    url('../fonts/BebasNeue-Regular.woff2') format('woff2');
 }
 
 .bebas-font {
